@@ -6,9 +6,10 @@ Java vectorized cpu/gpu tool for benchmarking generic math workloads.
 ```
                      1K   / 1M   / 100M
 auto-vectorization:  0ms  / 3ms  / 94ms
-simd vectorization:  17ms / 43ms / 98ms
+simd-vectorization:  17ms / 43ms / 98ms
+jocl-vectorization:  TBD  / TBD  / TBD
 ```
 
-installation: openjdk-24-ea+20 from https://jdk.java.net/24/
+installation: lwjgl 3.3.4 customize https://www.lwjgl.org/customize
 
-running: --add-modules jdk.incubator.vector
+running: add lwjgl/opencl jars in the class path
